--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,11 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 	<packaging>pom</packaging>
 
 	<properties>
-		<bookPath>/all</bookPath>
 		<shortTitle>All</shortTitle>
 	</properties>
 
 	<name>PragmaticKM All</name>
-	<url>https://pragmatickm.com${bookPath}/</url><!-- Can't inherit due to multi-module -->
+	<url>https://pragmatickm.com/all/</url>
 	<description>Convenience POM to include most PragmaticKM features, not including documentation or examples.</description>
 	<inceptionYear>2016</inceptionYear>
 
