--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 
 	<groupId>com.pragmatickm</groupId>
 	<artifactId>pragmatickm-all</artifactId>
-	<version>1.2.4</version>
+	<version>1.2.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>PragmaticKM All</name>
@@ -46,7 +46,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<connection>scm:git:git://github.com/aoindustries/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/aoindustries/${project.artifactId}</url>
-		<tag>pragmatickm-all-1.2.4</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
