--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<dependency>
 			<groupId>com.pragmatickm</groupId>
 			<artifactId>pragmatickm-task-all</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 	</dependencies>
