--- a/pom.xml
+++ b/pom.xml
@@ -53,19 +53,19 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<dependency>
 			<groupId>com.pragmatickm</groupId>
 			<artifactId>pragmatickm-contact-all</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>com.pragmatickm</groupId>
 			<artifactId>pragmatickm-password-all</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>com.pragmatickm</groupId>
 			<artifactId>pragmatickm-procedure-all</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
