--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,11 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.pragmatickm</groupId>
-		<artifactId>pragmatickm-parent</artifactId>
-		<version>1.0.2</version>
+		<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-parent</artifactId><version>1.0.2</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.pragmatickm</groupId>
-	<artifactId>pragmatickm-all</artifactId>
-	<version>1.2.5-SNAPSHOT</version>
+	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.2.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>PragmaticKM 1 All</name>
@@ -51,27 +47,19 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 
 	<dependencies>
 		<dependency>
-			<groupId>com.pragmatickm</groupId>
-			<artifactId>pragmatickm-contact-all</artifactId>
-			<version>1.2.5-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-all</artifactId><version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.pragmatickm</groupId>
-			<artifactId>pragmatickm-password-all</artifactId>
-			<version>1.2.5-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-all</artifactId><version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.pragmatickm</groupId>
-			<artifactId>pragmatickm-procedure-all</artifactId>
-			<version>1.2.5-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-all</artifactId><version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.pragmatickm</groupId>
-			<artifactId>pragmatickm-task-all</artifactId>
-			<version>1.2.5-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.2.5-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 	</dependencies>
