Backported SemanticCMS 2 changes to the 1.x branch

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 
 	<dependencies>
 		<dependency>
-			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-all</artifactId><version>1.2.5-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-all</artifactId><version>1.2.5-validation-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
