--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,7 +37,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<documented.groupId>com.pragmatickm</documented.groupId><documented.artifactId>pragmatickm-all</documented.artifactId>
 		<documented.javaVersion>1.7</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
-		<documented.name>PragmaticKM 1 All</documented.name>
+		<documented.name>PragmaticKM All</documented.name>
 		<documented.shortTitle>All</documented.shortTitle>
 		<documented.url>https://pragmatickm.com/all/</documented.url>
 		<documented.description>Convenience POM to include most PragmaticKM features, not including documentation or examples.</documented.description>
