--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-parent</artifactId><version>1.1.0-validation-SNAPSHOT</version>
+		<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-parent</artifactId><version>1.2.0-SNAPSHOT</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
@@ -45,21 +45,47 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<tag>HEAD</tag>
 	</scm>
 
+	<dependencyManagement>
+		<!-- TODO: pragmatickm-bom -->
+		<dependencies>
+			<dependency>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-all</artifactId><version>1.2.5-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
+			<!-- TODO: pragmatickm-contact-bom -->
+			<dependency>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-all</artifactId><version>1.3.0-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
+			<!-- TODO: pragmatickm-password-bom -->
+			<dependency>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-all</artifactId><version>1.3.1-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
+			<!-- TODO: pragmatickm-procedure-bom -->
+			<dependency>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.3.1-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
+			<!-- TODO: pragmatickm-task-bom -->
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
-			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-all</artifactId><version>1.2.4-validation-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-all</artifactId>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-all</artifactId><version>1.3.0-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-all</artifactId>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-all</artifactId><version>1.3.0-validation-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-all</artifactId>
 			<type>pom</type>
 		</dependency>
 		<dependency>
-			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.3.0-validation-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId>
 			<type>pom</type>
 		</dependency>
 	</dependencies>
