--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-all</artifactId><version>1.3.1-SNAPSHOT</version>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-all</artifactId><version>1.3.1-POST-SNAPSHOT</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
