--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all-book</artifactId><version>1.3.0-POST-SNAPSHOT</version>
+	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all-book</artifactId><version>1.3.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -105,7 +105,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		</dependency>
 		<!-- Dependency for dependencyversion-maven-plugin only -->
 		<dependency>
-			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.3.0-POST-SNAPSHOT</version>
+			<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.3.1-SNAPSHOT</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
