--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.3.0-POST-SNAPSHOT</version>
+	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.3.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>PragmaticKM All</name>
@@ -60,7 +60,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.3.1-POST-SNAPSHOT</version>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.3.2-SNAPSHOT</version>
 				<type>pom</type>
 			</dependency>
 		</dependencies>
