--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.6.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+				<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-task-all</artifactId><version>1.6.0${POST-SNAPSHOT}</version>
 				<type>pom</type>
 			</dependency>
 			<!-- BOM -->
