Using packaging=jar instead of packaging=bundle for all jar projects.
OSGI manifest entries are still added, however.

This change is required since maven-bundle-plugin has been adding entries with a constant and hard-coded timestamp of 1980-02-01.

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ along with pragmatickm-all.  If not, see <https://www.gnu.org/licenses/>.
   </parent>
 
   <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.6.3-POST-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
 
   <properties>
     <module.name>com.pragmatickm.all</module.name>
