Added support for contact im types teams, telegram, and zoom.

--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@ along with pragmatickm-all.  If not, see <https://www.gnu.org/licenses/>.
         <groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.14.0</version>
       </dependency>
       <dependency>
-        <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-model</artifactId><version>1.6.1${POST-SNAPSHOT}</version>
+        <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-model</artifactId><version>1.7.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
       </dependency>
       <dependency>
         <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-contact-servlet</artifactId><version>1.6.1${POST-SNAPSHOT}</version>
